CPP01-v0.5 : ex04 en cours

--- a/cpp_01/ex01/Makefile
+++ b/cpp_01/ex01/Makefile
@@ -24,7 +24,7 @@ CEND		= \033[0m
 
 ${NAME}:	${OBJS}
 		@echo
-		@echo "$(CYELLOW)Compilation of philo$(CEND)"
+		@echo "$(CYELLOW)Compilation of Brainzz$(CEND)"
 		@echo "$(CGREY)"
 		${CXX} -o ${NAME} ${OBJS}
 		@echo "$(CEND)"
@@ -43,7 +43,7 @@ clean:
 		@echo
 
 fclean:		clean
-		@echo "$(CYELLOW)Deleting .o files and philo$(CEND)"
+		@echo "$(CYELLOW)Deleting .o files and Brainzz$(CEND)"
 		@echo "$(CGREY)"
 		${RM} ${NAME}
 		@echo "$(CEND)"
