--- a/cpp_00/ex00/Makefile
+++ b/cpp_00/ex00/Makefile
@@ -22,7 +22,7 @@ CEND		= \033[0m
 
 ${NAME}:	${OBJS}
 		@echo
-		@echo "$(CYELLOW)Compilation of philo$(CEND)"
+		@echo "$(CYELLOW)Compilation of megaphone$(CEND)"
 		@echo "$(CGREY)"
 		${CXX} -o ${NAME} ${OBJS}
 		@echo "$(CEND)"
@@ -41,7 +41,7 @@ clean:
 		@echo
 
 fclean:		clean
-		@echo "$(CYELLOW)Deleting .o files and philo$(CEND)"
+		@echo "$(CYELLOW)Deleting .o files and megaphone$(CEND)"
 		@echo "$(CGREY)"
 		${RM} ${NAME}
 		@echo "$(CEND)"
