--- a/cpp_01/ex03/Makefile
+++ b/cpp_01/ex03/Makefile
@@ -1,10 +1,13 @@
-SRCNAME 	=	main.cpp
+SRCNAME 	=	main.cpp		\
+				Weapon.cpp		\
+				HumanA.cpp		\
+				HumanB.cpp
 
 SRCS 		= ${SRCNAME}
 
 OBJS 		= ${SRCS:.cpp=.o}
 
-NAME		= ptr
+NAME		= attack
 
 CXX 		= clang++
 RM 			= rm -f
@@ -22,7 +25,7 @@ CEND		= \033[0m
 
 ${NAME}:	${OBJS}
 		@echo
-		@echo "$(CYELLOW)Compilation of philo$(CEND)"
+		@echo "$(CYELLOW)Compilation of Weapon$(CEND)"
 		@echo "$(CGREY)"
 		${CXX} -o ${NAME} ${OBJS}
 		@echo "$(CEND)"
@@ -41,7 +44,7 @@ clean:
 		@echo
 
 fclean:		clean
-		@echo "$(CYELLOW)Deleting .o files and philo$(CEND)"
+		@echo "$(CYELLOW)Deleting .o files and Weapon$(CEND)"
 		@echo "$(CGREY)"
 		${RM} ${NAME}
 		@echo "$(CEND)"
