CPP04-v1.0 : ex03 done

--- a/cpp_04/ex03/Makefile
+++ b/cpp_04/ex03/Makefile
@@ -1,8 +1,9 @@
-SRCNAME 	=	main.cpp		\
-				Animal.cpp		\
-				Cat.cpp			\
-				Dog.cpp			\
-				Brain.cpp
+SRCNAME 	=	main.cpp			\
+				AMateria.cpp		\
+				Character.cpp		\
+				Cure.cpp			\
+				Ice.cpp				\
+				MateriaSource.cpp	\
 
 SRCS 		= ${SRCNAME}
 
