CPP05-v0.6 : ex02 en cours

--- a/cpp_05/ex02/Makefile
+++ b/cpp_05/ex02/Makefile
@@ -1,6 +1,7 @@
 SRCNAME 	=	main.cpp			\
 				Bureaucrat.cpp		\
-				Form.cpp
+				Form.cpp			\
+				ShrubberyCreationForm.cpp
 
 SRCS 		= ${SRCNAME}
 
