cpp05-v0.75 : ex02 done

--- a/cpp_05/ex02/Makefile
+++ b/cpp_05/ex02/Makefile
@@ -1,7 +1,9 @@
-SRCNAME 	=	main.cpp			\
-				Bureaucrat.cpp		\
-				Form.cpp			\
-				ShrubberyCreationForm.cpp
+SRCNAME 	=	main.cpp					\
+				Bureaucrat.cpp				\
+				Form.cpp					\
+				ShrubberyCreationForm.cpp	\
+				RobotomyRequestForm.cpp		\
+				PresidentialPardonForm.cpp
 
 SRCS 		= ${SRCNAME}
 
