CPP07 : done, starting CPP08

--- a/cpp_07/ex02/Makefile
+++ b/cpp_07/ex02/Makefile
@@ -6,7 +6,7 @@ OBJS 		= ${SRCS:.cpp=.o}
 
 NAME		= Template
 
-CXX 		= clang++
+CXX 		= clang++ -g -fsanitize=address
 RM 			= rm -f
 CXXFLAGS 	= -Wall -Wextra -Werror -std=c++98
 
